name:                mueval
version:             0.9.3

license:             BSD3
license-file:        LICENSE
author:              Gwern
maintainer:          Gwern <gwern@gwern.net>

category:            Development, Language
synopsis:            Safely evaluate pure Haskell expressions
description:         Mueval is a Haskell interpreter. It
                     uses the GHC API to evaluate arbitrary Haskell expressions.
                     Importantly, mueval takes many precautions to defang and avoid \"evil\"
                     code.  It uses resource limits, whitelisted modules and Safe Haskell,
                     special Show instances for IO, threads, processes, and changes of directory
                     to sandbox the Haskell code.
                     .
                     It is, in short, intended to be a standalone version of Lambdabot's famous
                     evaluation functionality. For examples and explanations, please see the README file.
                     .
                     Mueval is POSIX-only.
homepage:            https://github.com/gwern/mueval

build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC==6.10.1

data-files:          README.md, HCAR.tex
extra-source-files:  build.sh, tests.sh

library
        exposed-modules:     Mueval.Parallel, Mueval.Context, Mueval.Interpreter,
                             Mueval.ArgsParse, Mueval.Resources
        build-depends:       base>= 4.5 && < 5, containers, directory, mtl>2, filepath, unix, process,
                             hint>=0.3.1, show>=0.3, Cabal, extensible-exceptions, simple-reflect,
                             QuickCheck
        ghc-options:         -Wall -static

executable mueval-core
           main-is:       main.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded

executable mueval
           main-is:       watchdog.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded

source-repository head
  type:     git
  location: git://github.com/gwern/mueval.git
