name:                mueval
version:             0.7.0

license:             BSD3
license-file:        LICENSE
author:              Gwern
maintainer:          Gwern <gwern0@gmail.com>

category:            Development, Language
synopsis:            Safely evaluate Haskell expressions
description:         Mueval is a Haskell interpreter. It
                     uses the GHC API to evaluate arbitrary Haskell expressions.
                     Importantly, mueval takes many precautions to defang and avoid \"evil\"
                     code.  It uses resource limits, whitelisted modules,
                     special Show instances for IO, threads, processes, changes of directory, and so
                     on to sandbox the Haskell code.
                     .
                     It is, in short, intended to be a standalone version of Lambdabot's famous
                     evaluation functionality. For examples and explanations, please see the README file.
                     .
                     Mueval is POSIX-only.
homepage:            http://code.haskell.org/mubot/

build-type:          Simple
cabal-version:       >= 1.2
tested-with:         GHC==6.10.1

data-files:          README
extra-source-files:  build.sh, tests.sh

library
        exposed-modules:     Mueval.Parallel, Mueval.Context, Mueval.Interpreter,
                             Mueval.ArgsParse, Mueval.Resources
        build-depends:       base>=4, containers, directory, mtl, filepath, unix, process,
                             hint>=0.3.0.0, show>=0.3, utf8-string, Cabal
        ghc-options:         -Wall -static -O2

executable mueval-core
           main-is:       main.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded -O2

executable mueval
           main-is:       watchdog.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded -O2