name:                mueval
version:             0.8.1

license:             BSD3
license-file:        LICENSE
author:              Gwern
maintainer:          Gwern <gwern0@gmail.com>

category:            Development, Language
synopsis:            Safely evaluate Haskell expressions
description:         Mueval is a Haskell interpreter. It
                     uses the GHC API to evaluate arbitrary Haskell expressions.
                     Importantly, mueval takes many precautions to defang and avoid \"evil\"
                     code.  It uses resource limits, whitelisted modules,
                     special Show instances for IO, threads, processes, changes of directory, and so
                     on to sandbox the Haskell code.
                     .
                     It is, in short, intended to be a standalone version of Lambdabot's famous
                     evaluation functionality. For examples and explanations, please see the README file.
                     .
                     Mueval is POSIX-only.
homepage:            http://code.haskell.org/mubot/

build-type:          Simple
cabal-version:       >= 1.6
tested-with:         GHC==6.10.1

data-files:          README, HCAR.tex
extra-source-files:  build.sh, tests.sh

library
        exposed-modules:     Mueval.Parallel, Mueval.Context, Mueval.Interpreter,
                             Mueval.ArgsParse, Mueval.Resources
        build-depends:       base>=4 && < 5, containers, directory, mtl<1.2, filepath, unix, process,
                             hint>=0.3.1, show>=0.3, utf8-string, Cabal, extensible-exceptions
        ghc-options:         -Wall -static -O2

executable mueval-core
           main-is:       main.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded -O2

executable mueval
           main-is:       watchdog.hs
           build-depends: base
           ghc-options:   -Wall -static -threaded -O2

source-repository head
  type:     darcs
  location: http://code.haskell.org/mubot/
